<resources>
    <string name="app_name">Movi EZ</string>
    <string name="hint_search">Search for movies</string>
    <string name="title_popular">Popular</string>
    <string name="title_nowplaying">Now Playing</string>
    <string name="title_upcoming">Up Coming</string>
    <string name="title_toprate">Top Rate</string>

    <string name="title_home">Home</string>
    <string name="title_genres">Genres</string>
    <string name="title_favorite">Favorite</string>

    <string name="title_duration">Duration:</string>
    <string name="title_details_genres">Genres:</string>
    <string name="title_status">Status</string>
    <string name="title_release_date">Date:</string>
    <string name="title_production_company">Production:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_vote">IMDB Score:</string>
    <string name="title_list_date">Released Date:</string>
    <string name="title_born">Born:</string>
    <string name="title_died">Died:</string>
    <string name="title_list_department">Department:</string>
    <string name="title_movies">Related Movies</string>
    <string name="title_minutes">minutes</string>
    <string name="title_fav_movies">Favorite Movies</string>
</resources>
