<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 tools:context=".ui.movie.MovieDetailsFragment">
        <ImageView android:id="@+id/imageDetailsPoster"
                   android:layout_width="100dp"
                   android:layout_height="160dp"
                   app:layout_constraintLeft_toLeftOf="parent"
                   app:layout_constraintTop_toTopOf="parent"
                   android:layout_margin="@dimen/dp_15"/>
        <TextView android:id="@+id/textDetailsTitle"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  app:layout_constraintLeft_toRightOf="@+id/imageDetailsPoster"
                  app:layout_constraintTop_toTopOf="parent"
                  android:fontFamily="@font/lato_bold"
                  android:textSize="@dimen/sp_25"
                  android:layout_margin="@dimen/dp_15"/>

        <TextView android:id="@+id/textDetailsDuration"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  app:layout_constraintLeft_toRightOf="@+id/imageDetailsPoster"
                  app:layout_constraintTop_toBottomOf="@id/textDetailsTitle"
                  android:layout_marginStart="@dimen/dp_15"
                  android:layout_marginTop="@dimen/dp_5"
                  android:fontFamily="@font/lato_light_italic"/>
        <TextView android:id="@+id/titleDetailsDuration"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  app:layout_constraintLeft_toRightOf="@+id/textDetailsDuration"
                  app:layout_constraintTop_toBottomOf="@id/textDetailsTitle"
                  android:layout_marginTop="@dimen/dp_5"
                  android:text="@string/title_duration"
                  android:fontFamily="@font/lato_light_italic"/>

        <TextView android:id="@+id/titleDetailsGenre"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  app:layout_constraintLeft_toRightOf="@+id/imageDetailsPoster"
                  app:layout_constraintTop_toBottomOf="@+id/textDetailsDuration"
                  android:layout_marginStart="@dimen/dp_15"
                  android:layout_marginTop="@dimen/dp_20"
                  android:fontFamily="@font/lato"
                  android:text="@string/title_details_genres"/>
        <TextView android:id="@+id/textDetailsGenre"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  app:layout_constraintLeft_toRightOf="@+id/titleDetailsGenre"
                  app:layout_constraintTop_toBottomOf="@+id/textDetailsDuration"
                  app:layout_constraintRight_toRightOf="parent"
                  android:layout_marginStart="@dimen/dp_5"
                  android:layout_marginTop="@dimen/dp_20"
                  android:layout_marginEnd="@dimen/dp_10"
                  android:fontFamily="@font/lato_light_italic"
                  android:singleLine="true"
                  android:marqueeRepeatLimit="marquee_forever"
                  android:ellipsize="marquee"/>

        <TextView android:id="@+id/titleDetailsStatus"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  app:layout_constraintLeft_toRightOf="@+id/imageDetailsPoster"
                  app:layout_constraintTop_toBottomOf="@+id/textDetailsGenre"
                  android:layout_marginStart="@dimen/dp_15"
                  android:layout_marginTop="@dimen/dp_10"
                  android:fontFamily="@font/lato"
                  android:text="@string/title_status"/>
        <TextView android:id="@+id/textDetailsStatus"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  app:layout_constraintLeft_toRightOf="@+id/titleDetailsStatus"
                  app:layout_constraintTop_toBottomOf="@+id/textDetailsGenre"
                  android:layout_marginStart="@dimen/dp_5"
                  android:layout_marginTop="@dimen/dp_10"
                  android:fontFamily="@font/lato_light_italic"/>

        <TextView android:id="@+id/titleDetailsDate"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  app:layout_constraintLeft_toRightOf="@id/imageDetailsPoster"
                  app:layout_constraintTop_toBottomOf="@id/textDetailsStatus"
                  android:layout_marginStart="@dimen/dp_15"
                  android:layout_marginTop="@dimen/dp_10"
                  android:text="@string/title_release_date"/>
        <TextView android:id="@+id/textDetailsDate"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  app:layout_constraintLeft_toRightOf="@id/titleDetailsDate"
                  app:layout_constraintTop_toBottomOf="@id/textDetailsStatus"
                  android:layout_marginStart="@dimen/dp_5"
                  android:layout_marginTop="@dimen/dp_10"
                  android:fontFamily="@font/lato_light_italic"/>

        <TextView android:id="@+id/textDetailsProduction"
                  android:layout_width="250dp"
                  android:layout_height="wrap_content"
                  android:singleLine="true"
                  android:marqueeRepeatLimit="marquee_forever"
                  android:ellipsize="marquee"
                  app:layout_constraintLeft_toRightOf="@id/imageDetailsPoster"
                  app:layout_constraintTop_toBottomOf="@id/textDetailsDate"
                  android:layout_marginStart="@dimen/dp_15"
                  android:layout_marginTop="@dimen/dp_10"
                  android:layout_marginEnd="@dimen/dp_10"
                  android:fontFamily="@font/lato_light_italic"/>

        <TextView android:id="@+id/textDetailsInfo"
                  android:layout_width="0dp"
                  android:layout_height="0dp"
                  app:layout_constraintTop_toBottomOf="@id/textDetailsProduction"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintRight_toRightOf="parent"
                  app:layout_constraintBottom_toBottomOf="parent"
                  android:layout_margin="@dimen/dp_15"
                  android:fontFamily="@font/cardo_bold"
                  android:scrollbars="vertical"/>
    </android.support.constraint.ConstraintLayout>
</layout>
