<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="actor" type="phuchh.sunasterisk.projectmoviedb.data.model.Actor"/>
    </data>
    <android.support.v4.widget.NestedScrollView android:layout_width="match_parent"
                                                android:layout_height="match_parent"
                                                tools:context=".ui.actor.ActorActivity">
        <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                     android:layout_height="match_parent">
            <ImageView android:id="@+id/imageActorPoster"
                       android:layout_width="@dimen/dp_100"
                       android:layout_height="@dimen/dp_150"
                       app:layout_constraintLeft_toLeftOf="parent"
                       app:layout_constraintTop_toTopOf="parent"
                       android:layout_margin="@dimen/dp_15"
                       bindImage="@{actor.profilePath}"/>
            <TextView android:id="@+id/textActorName"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      app:layout_constraintTop_toTopOf="parent"
                      app:layout_constraintRight_toRightOf="parent"
                      app:layout_constraintLeft_toRightOf="@+id/imageActorPoster"
                      android:layout_margin="@dimen/dp_15"
                      android:fontFamily="@font/lato_bold"
                      android:textSize="@dimen/sp_25"
                      android:text="@{actor.name}"/>
            <TextView android:id="@+id/titleBorn"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      app:layout_constraintTop_toBottomOf="@+id/textActorName"
                      app:layout_constraintLeft_toRightOf="@id/imageActorPoster"
                      android:text="@string/title_born"
                      android:fontFamily="@font/lato_bold"
                      android:textSize="12sp"
                      android:layout_margin="@dimen/dp_15"/>
            <TextView android:id="@+id/textActorBorn"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      app:layout_constraintLeft_toRightOf="@+id/titleBorn"
                      app:layout_constraintTop_toBottomOf="@id/textActorName"
                      app:layout_constraintRight_toRightOf="parent"
                      android:layout_marginTop="@dimen/dp_15"
                      android:layout_marginStart="@dimen/dp_5"
                      android:layout_marginEnd="@dimen/dp_15"
                      android:fontFamily="@font/lato"
                      android:textSize="12sp"
                      bindActorPoB="@{actor}"/>
            <TextView android:id="@+id/titleDied"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      app:layout_constraintLeft_toRightOf="@id/imageActorPoster"
                      app:layout_constraintTop_toBottomOf="@id/textActorBorn"
                      android:text="@string/title_died"
                      android:fontFamily="@font/lato_bold"
                      android:textSize="12sp"
                      android:layout_margin="@dimen/dp_15"/>
            <TextView android:id="@+id/textActorDied"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      app:layout_constraintLeft_toRightOf="@id/titleDied"
                      app:layout_constraintTop_toBottomOf="@id/textActorBorn"
                      app:layout_constraintRight_toRightOf="parent"
                      android:fontFamily="@font/lato"
                      android:textSize="12sp"
                      android:layout_marginStart="@dimen/dp_5"
                      android:layout_marginTop="@dimen/dp_15"
                      android:layout_marginEnd="@dimen/dp_15"
                      android:text="@{actor.deathDay}"/>
            <TextView android:id="@+id/titleActorDepartment"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      app:layout_constraintTop_toBottomOf="@id/textActorDied"
                      app:layout_constraintLeft_toRightOf="@id/imageActorPoster"
                      android:fontFamily="@font/lato_bold"
                      android:textSize="12sp"
                      android:layout_margin="@dimen/dp_15"
                      android:layout_marginTop="@dimen/dp_15"
                      android:text="@string/title_list_department"/>
            <TextView android:id="@+id/textActorDepartment"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      app:layout_constraintLeft_toRightOf="@id/titleActorDepartment"
                      app:layout_constraintTop_toBottomOf="@id/textActorDied"
                      app:layout_constraintRight_toRightOf="parent"
                      android:fontFamily="@font/lato"
                      android:textSize="12sp"
                      android:layout_marginStart="@dimen/dp_5"
                      android:layout_marginEnd="@dimen/dp_15"
                      android:layout_marginTop="@dimen/dp_15"
                      android:text="@{actor.department}"/>
            <TextView android:id="@+id/textActorBio"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      app:layout_constraintTop_toBottomOf="@id/imageActorPoster"
                      app:layout_constraintRight_toRightOf="parent"
                      app:layout_constraintLeft_toLeftOf="parent"
                      android:layout_margin="@dimen/dp_15"
                      android:justificationMode="inter_word"
                      android:fontFamily="@font/lato_bold"
                      android:text="@{actor.biography}"/>
            <TextView android:id="@+id/titleActorMovies"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:text="@string/title_movies"
                      app:layout_constraintLeft_toLeftOf="parent"
                      app:layout_constraintRight_toRightOf="parent"
                      app:layout_constraintTop_toBottomOf="@id/textActorBio"
                      android:layout_margin="@dimen/dp_15"
                      android:fontFamily="@font/lato_bold"
                      android:textSize="@dimen/sp_25"/>
            <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerActorMovies"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/titleActorMovies"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layoutManager="android.support.v7.widget.GridLayoutManager"
                    app:spanCount="3"
                    android:layout_margin="@dimen/dp_15"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</layout>
